--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "react-native-camera",
+  "name": "react-native-camera-02",
   "description": "A Camera component for React Native. Also reads barcodes.",
-  "version": "4.2.1",
-  "author": "Lochlan Wansbrough <lochie@live.com> (http://lwansbrough.com)",
+  "version": "1.0.0",
+  "author": "Lochlan Wansbrough Modified by Mateus Chines",
   "collective": {
     "type": "opencollective",
     "url": "https://opencollective.com/react-native-camera",
     "logo": "https://opencollective.com/opencollective/logo.txt"
   },
   "dependencies": {
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "deprecated-react-native-prop-types": "^2.2.0"
   },
   "devDependencies": {
     "@babel/runtime": "^7.3.1",
